@@ -925,6 +925,24 @@ The legend may consist of several paragraphs.
 
 This paragraph might flow around the figure...
 
+Now widths:
+
+An image 2 em wide:
+
+\includegraphics{../../../docs/user/rst/images/biohazard.png}
+
+An image 2 em wide and 30 pixel high:
+
+\includegraphics{../../../docs/user/rst/images/biohazard.png}
+
+An image occupying 70{\%} of the line width:
+
+\includegraphics{../../../docs/user/rst/images/biohazard.png}
+
+An image 3 cm high:
+
+\includegraphics{../../../docs/user/rst/images/biohazard.png}
+
 
 %___________________________________________________________________________
 
